Fix modal window z-index once again

--- a/sass/blocks/modal-cart.scss
+++ b/sass/blocks/modal-cart.scss
@@ -1,6 +1,6 @@
 .modal-cart {
   position: fixed;
-  z-index: 100;
+  z-index: 1000;
   top: 50%;
   left: 50%;
 
