--- a/sass/blocks/modal-overlay.scss
+++ b/sass/blocks/modal-overlay.scss
@@ -1,6 +1,6 @@
 .modal-overlay::after {
   position: fixed;
-  z-index: 5;
+  z-index: 500;
   top: 0;
   left: 0;
 
